--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,1 @@
-# Example YAML configuration for data pipeline
-sources:
-  github:
-    enabled: true
-    repo_list:
-      - "openai/gym"
-      - "pallets/flask"
-  docs:
-    enabled: true
-    doc_urls:
-      - "https://docs.python.org/3/"
-  stackoverflow:
-    enabled: false
-    api_key: "YOUR_KEY"
-paths:
-  raw_data: "data/raw"
-  clean_data: "data/clean"
-  logs: "logs"
-logging:
-  level: "DEBUG"  # or "INFO" for production
-  log_file: "pipeline.log"
+{"embedding": {"model_name": "sentence-transformers/all-MiniLM-L6-v2"}, "peft": {"r": 4, "alpha": 32, "dropout": 0.0, "num_train_epochs": 1, "batch_size": 16, "output_dir": "peft_adapter_r4_a32_d0.0_e1_b16"}}
