--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,17 @@ numpy
 pyyaml
 faiss-cpu
 docarray>=0.21.0,<0.22.0
-jina>=3.14.0,<3.15.0
+jina>=3.14.0
 peft
 datasets
 torch
 transformers
 psutil
-beautifulsoup
+beautifulsoup4
+matplotlib
+seaborn
+opentelemetry-exporter-prometheus
+GPUtil
+scikit-learn
+pytest
+plotly>=5.0.0,<6.0.0
