--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
-# Byte-compiled / optimized / DLL files
+# --- Byte-compiled / optimized / DLL files ---
 __pycache__/
 *.py[cod]
+*$py.class
+
+# --- C extensions ---
 *.so
 
-# Environment & Tooling
-.env
-.venv/
-venv/
-ENV/
+# --- Distribution / packaging ---
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# --- Pytest ---
 .pytest_cache/
+.coverage
+coverage.xml
+
+# --- IDE / Editor ---
 .vscode/
-cdk.out/
-node_modules/
+.idea/
+*.swp
 
-# OS generated files
-.DS_Store
-Thumbs.db
+# --- Environment ---
+.env
+*.env*
+.venv
+venv/
 
-# Editor temporary files
-.__atomic-write*
-
-# --- Generated Outputs ---
+# --- Project-specific ---
+.ruff_cache/
+logs/
 outputs/
+artifacts/
