- Add SageMaker training automation (scripts/sagemaker_train.py, noxfile, config) - Enhance Nox automation: multi-env, artifact sync, notebook validation, robust error handling - Expand .pre-commit-config.yaml with mypy, Prettier, security, and merge conflict checks - Update checklist and docs for new MLOps, DevOps, and notebook workflows - Refactor and fix imports in scripts for Clean Architecture compliance - Add artifact sync to S3 and SageMaker sessions to Nox - Improve pre-push.cmd for reliable local CI gating - Harden config, error handling, and type checks across scripts and Nox - Remove obsolete Makefile and scripts, update requirements for new workflows - Add and validate new/updated notebooks and infrastructure

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,8 +2,8 @@
 version: 2
 
 updates:
-  - package-ecosystem: "pip"
-    directory: "/requirements"
+  - package-ecosystem: "poetry"
+    directory: "/"
     schedule:
       interval: "daily"
     open-pull-requests-limit: 5
@@ -12,8 +12,6 @@ updates:
     labels:
       - "dependencies"
       - "security"
-    ignore:
-      - dependency-name: "setuptools"
 
   - package-ecosystem: "github-actions"
     directory: "/"
