--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 pythonpath = .
 testpaths = tests
+addopts = -ra -q -p no:cacheprovider
+
+# Ensure pytest discovers tests in the 'tests' directory and uses the project root for imports.
 
 # --- Logging Configuration ---
 log_cli = true
