--- a/Dockerfile.ingestion
+++ b/Dockerfile.ingestion
@@ -1,25 +1,28 @@
 # --- Stage 1: Production Dependency Builder ---
 # Builds a lean virtual environment with only production dependencies.
-FROM python:3.11-slim AS prod_builder
+FROM python:3.11 AS prod_builder
 
 WORKDIR /app
-RUN python -m venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
 
-COPY requirements/prod.txt .
-# Use a cache mount to speed up pip installs during builds without bloating the image.
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -r prod.txt
+# Patch OS packages before installing Python deps (security best practice)
+RUN apt-get update && apt-get upgrade -y && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+COPY pyproject.toml poetry.lock ./
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install --upgrade poetry && \
+    poetry cache clear . --all || true && \
+    for i in 1 2 3; do poetry install --only main --no-root && break || sleep 10; done
 
 
 # --- Stage 2: Development & Test Dependency Builder ---
 # Builds on the production environment, adding development dependencies.
 FROM prod_builder AS dev_builder
 
-COPY requirements/dev.txt .
-# Use the same cache mount strategy for development dependencies.
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -r dev.txt
+COPY pyproject.toml poetry.lock ./
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install --upgrade poetry && \
+    poetry cache clear . --all || true && \
+    for i in 1 2 3; do poetry install --with dev --no-root && break || sleep 10; done
 
 
 # --- Stage 3: Tester ---
@@ -34,7 +37,7 @@ COPY config ./config
 COPY data/dev ./data/dev
 COPY pytest.ini .
 
-RUN pytest
+RUN poetry run pytest
 
 
 # --- Stage 4: Final Production Image ---
@@ -46,14 +49,9 @@ WORKDIR /app
 ENV PATH="/opt/venv/bin:$PATH"
 ENV PROJECT_ROOT="/app"
 
-# Copy the virtual environment from the builder stage.
-COPY --from=prod_builder /opt/venv /opt/venv
+COPY --from=prod_builder /usr/local /usr/local
 
-# Copy application code, chown to the 'nonroot' user (uid 65532) used by distroless.
 COPY --chown=65532:65532 src ./src
 COPY --chown=65532:65532 config ./config
 
-# The distroless container runs as the 'nonroot' user by default, so no USER command is needed.
-
-# The command now points to the single, definitive ingestion entry point.
 CMD ["python", "src/main.py"]
