--- a/config/staging.yaml
+++ b/config/staging.yaml
@@ -1,11 +1,15 @@
 # --- Staging Environment Configuration ---
-# This file overrides base.yaml for staging runs.
+# This file overrides dev for staging runs.
 # It should mirror production as closely as possible, but point to staging resources.
+
+vector_store_bucket: "placeholder-vector-store-bucket-staging"
+data_bucket: "placeholder-data-bucket-staging"
+log_level: "DEBUG"
+api_timeout_seconds: 30
+feature_flags: {}
 
 data_source:
   type: "s3"
-  # In a deployed environment (ECS), this value is provided by the
-  # DATA_BUCKET environment variable set by the CDK stack.
   bucket: "placeholder-data-bucket-staging"
   prefix: "raw/"
 
@@ -16,10 +20,6 @@ embedding_service:
 
 vector_repository:
   type: "faiss"
-  # This is a temporary path inside the container for the index file
   persist_path: "/tmp/vector_store/faiss_index.bin"
-  # In a deployed environment (ECS), this value is provided by the
-  # VECTOR_STORE_BUCKET environment variable set by the CDK stack.
   s3_bucket: "placeholder-vector-store-bucket-staging"
-  # Use a distinct key for the staging index to prevent collisions with production.
   s3_key: "staging/faiss_index.bin"
