--- a/.github/workflows/validate-config.yml
+++ b/.github/workflows/validate-config.yml
@@ -29,9 +29,13 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Poetry
+        run: |
+          pip install poetry
+
       - name: Install dependencies
         run: |
-          pip install -r requirements/dev.txt
+          poetry install
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
