--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install Poetry
+        run: pip install poetry
+
       - name: Set Poetry to use in-project virtualenv
         run: poetry config virtualenvs.in-project true
 
@@ -48,14 +51,26 @@ jobs:
             ~/.cache/pypoetry
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Install Poetry
-        run: pip install poetry
-
       - name: Bootstrap dependencies
         run: poetry install --with dev
 
+      # - name: Run linter
+      #   run: poetry run make lint
+
       - name: Run tests
         run: poetry run make test
+
+      # - name: Run notebook tests with nbval
+      #   run: poetry run pytest --nbval notebooks/ai_demo.ipynb
+
+      # - name: Run pip-audit
+      #   run: poetry run make security-audit
+
+      # - name: Run Safety vulnerability scan
+      #   run: poetry run make safety-audit
+
+      # - name: Run pre-commit checks
+      #   run: poetry run pre-commit run --all-files
 
   build-and-push:
     name: Build and Push to ECR
