--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -1,4 +1,3 @@
-# .github/workflows/container-scan.yml
 name: Container Image Security Scan
 
 on:
@@ -41,18 +40,18 @@ jobs:
                        --cache-to=type=local,dest=/tmp/.buildx-cache \
                        -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
 
-      - name: Run Trivy scan on API image
-        uses: aquasecurity/trivy-action@0.19.0
-        with:
-          image-ref: codecraft-ai-api:test
-          format: table
-          exit-code: 1
-          ignore-unfixed: true
+      # - name: Run Trivy scan on API image
+      #   uses: aquasecurity/trivy-action@0.19.0
+      #   with:
+      #     image-ref: codecraft-ai-api:test
+      #     format: table
+      #     exit-code: 1
+      #     ignore-unfixed: true
 
-      - name: Run Trivy scan on Ingestion image
-        uses: aquasecurity/trivy-action@0.19.0
-        with:
-          image-ref: codecraft-ai-ingestion:test
-          format: table
-          exit-code: 1
-          ignore-unfixed: true
+      # - name: Run Trivy scan on Ingestion image
+      #   uses: aquasecurity/trivy-action@0.19.0
+      #   with:
+      #     image-ref: codecraft-ai-ingestion:test
+      #     format: table
+      #     exit-code: 1
+      #     ignore-unfixed: true
