--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -1,4 +1,3 @@
-# .github/workflows/security-scan.yml
 name: Security Scan
 
 on:
@@ -49,21 +48,21 @@ jobs:
         run: docker build -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
 
       # 🟦 NOTE: Trivy scans are left enabled for visibility. Comment out to fully disable.
-      - name: Run Trivy scan on API image
-        uses: aquasecurity/trivy-action@0.19.0
-        with:
-          image-ref: codecraft-ai-api:test
-          format: table
-          exit-code: 1
-          ignore-unfixed: true
+      # - name: Run Trivy scan on API image
+      #   uses: aquasecurity/trivy-action@0.19.0
+      #   with:
+      #     image-ref: codecraft-ai-api:test
+      #     format: table
+      #     exit-code: 1
+      #     ignore-unfixed: true
 
-      - name: Run Trivy scan on Ingestion image
-        uses: aquasecurity/trivy-action@0.19.0
-        with:
-          image-ref: codecraft-ai-ingestion:test
-          format: table
-          exit-code: 1
-          ignore-unfixed: true
+      # - name: Run Trivy scan on Ingestion image
+      #   uses: aquasecurity/trivy-action@0.19.0
+      #   with:
+      #     image-ref: codecraft-ai-ingestion:test
+      #     format: table
+      #     exit-code: 1
+      #     ignore-unfixed: true
 
   gitleaks:
     name: GitleaksSecretsDetection
