Test commit after hook normalization. Additional notebooks.

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -64,6 +64,7 @@ jobs:
       #     exit-code: 1
       #     ignore-unfixed: true
 
+  # 🟪 ARCH: Ensure full git history is available for Gitleaks to avoid ambiguous revision errors.
   gitleaks:
     name: GitleaksSecretsDetection
     runs-on: ubuntu-latest
@@ -71,6 +72,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
