--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container  # 🟩 GOOD: Enables BuildKit cache export/import
 
       - name: Cache Docker layers
         uses: actions/cache@v4
