--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -20,7 +20,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          driver: docker-container  # 🟩 GOOD: Enables BuildKit cache export/import
+          driver: docker-container
+
+      - name: Set Buildx builder as default
+        run: |
+          docker buildx use default
 
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -32,15 +36,15 @@ jobs:
 
       - name: Build API image
         run: |
-          docker build --cache-from=type=local,src=/tmp/.buildx-cache \
-                       --cache-to=type=local,dest=/tmp/.buildx-cache \
-                       -f Dockerfile.api -t codecraft-ai-api:test .
+          docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache \
+                              --cache-to=type=local,dest=/tmp/.buildx-cache \
+                              -f Dockerfile.api -t codecraft-ai-api:test .
 
       - name: Build Ingestion image
         run: |
-          docker build --cache-from=type=local,src=/tmp/.buildx-cache \
-                       --cache-to=type=local,dest=/tmp/.buildx-cache \
-                       -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
+          docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache \
+                              --cache-to=type=local,dest=/tmp/.buildx-cache \
+                              -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
 
       # - name: Run Trivy scan on API image
       #   uses: aquasecurity/trivy-action@0.19.0
