--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,19 +58,19 @@ jobs:
         run: poetry run pip show pre-commit || poetry add --group dev pre-commit
 
       - name: Run linter
-        run: poetry run make lint
+        run: poetry run ruff check . && poetry run ruff format --check . && poetry run mypy .
 
       - name: Run tests
-        run: poetry run make test
+        run: poetry run pytest
 
       - name: Run notebook tests with nbval
         run: poetry run pytest --nbval notebooks/ai_demo.ipynb
 
       - name: Run pip-audit
-        run: poetry run make security-audit
+        run: poetry run pip-audit
 
       - name: Run Safety vulnerability scan
-        run: poetry run make safety-audit
+        run: poetry run safety check
 
       - name: Run pre-commit checks
         run: poetry run pre-commit run --all-files
