Trivi cache error

--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -23,8 +23,7 @@ jobs:
           driver: docker-container
 
       - name: Set Buildx builder as default
-        run: |
-          docker buildx use default
+        run: docker buildx use default
 
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -36,13 +35,13 @@ jobs:
 
       - name: Build API image
         run: |
-          docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache \
+          docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
                               --cache-to=type=local,dest=/tmp/.buildx-cache \
                               -f Dockerfile.api -t codecraft-ai-api:test .
 
       - name: Build Ingestion image
         run: |
-          docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache \
+          docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
                               --cache-to=type=local,dest=/tmp/.buildx-cache \
                               -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
 
