--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -25,10 +25,6 @@ jobs:
       - name: Install pip-audit
         run: pip install pip-audit
 
-      # 🟦 NOTE: Skipping pip-audit step since no Makefile rule exists and Poetry is used.
-      # - name: Run pip-audit on requirements
-      #   run: make security-audit
-
   trivy-scan:
     name: TrivyContainerVulnerabilityScan
     runs-on: ubuntu-latest
@@ -41,9 +37,11 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
+          buildkitd-flags: --debug
+          install: true
 
-      - name: Set Buildx builder as default
-        run: docker buildx use default
+      - name: Ensure buildx cache directory exists
+        run: mkdir -p /tmp/.buildx-cache
 
       - name: Build API image
         run: |
@@ -53,26 +51,10 @@ jobs:
 
       - name: Build Ingestion image
         run: |
-          docker buildx build -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
+          docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
+                              --cache-to=type=local,dest=/tmp/.buildx-cache \
+                              -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
 
-      # 🟦 NOTE: Trivy scans are left enabled for visibility. Comment out to fully disable.
-      # - name: Run Trivy scan on API image
-      #   uses: aquasecurity/trivy-action@0.19.0
-      #   with:
-      #     image-ref: codecraft-ai-api:test
-      #     format: table
-      #     exit-code: 1
-      #     ignore-unfixed: true
-
-      # - name: Run Trivy scan on Ingestion image
-      #   uses: aquasecurity/trivy-action@0.19.0
-      #   with:
-      #     image-ref: codecraft-ai-ingestion:test
-      #     format: table
-      #     exit-code: 1
-      #     ignore-unfixed: true
-
-  # 🟪 ARCH: Ensure full git history is available for Gitleaks to avoid ambiguous revision errors.
   gitleaks:
     name: GitleaksSecretsDetection
     runs-on: ubuntu-latest
