--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -9,8 +9,8 @@ on:
     - cron: '0 4 * * *' # daily at 04:00 UTC
 
 jobs:
-  trivy-scan:
-    name: TrivyContainerVulnerabilityScan
+  container-build:
+    name: ContainerBuild
     runs-on: ubuntu-latest
 
     steps:
@@ -44,19 +44,3 @@ jobs:
           docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
                               --cache-to=type=local,dest=/tmp/.buildx-cache \
                               -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
-
-      # - name: Run Trivy scan on API image
-      #   uses: aquasecurity/trivy-action@0.19.0
-      #   with:
-      #     image-ref: codecraft-ai-api:test
-      #     format: table
-      #     exit-code: 1
-      #     ignore-unfixed: true
-
-      # - name: Run Trivy scan on Ingestion image
-      #   uses: aquasecurity/trivy-action@0.19.0
-      #   with:
-      #     image-ref: codecraft-ai-ingestion:test
-      #     format: table
-      #     exit-code: 1
-      #     ignore-unfixed: true
