--- a/.github/workflows.disabled/container-scan.yml
+++ b/.github/workflows.disabled/container-scan.yml
@@ -21,9 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
-
-      - name: Set Buildx builder as default
-        run: docker buildx use default
+          buildkitd-flags: --debug
 
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -35,12 +33,12 @@ jobs:
 
       - name: Build API image
         run: |
-          docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
+          docker buildx build --builder ${{ steps.buildx.outputs.name }} --cache-from=type=local,src=/tmp/.buildx-cache \
                               --cache-to=type=local,dest=/tmp/.buildx-cache \
                               -f Dockerfile.api -t codecraft-ai-api:test .
 
       - name: Build Ingestion image
         run: |
-          docker buildx build --builder default --cache-from=type=local,src=/tmp/.buildx-cache \
+          docker buildx build --builder ${{ steps.buildx.outputs.name }} --cache-from=type=local,src=/tmp/.buildx-cache \
                               --cache-to=type=local,dest=/tmp/.buildx-cache \
                               -f Dockerfile.ingestion -t codecraft-ai-ingestion:test .
